--- a/main.css
+++ b/main.css
@@ -5,20 +5,23 @@ body {
 }
 
 #index {
-    font-family: 'Open Sans','Georgia', serif;
+    font-family: 'Raleway','Georgia', serif;
     background-color: #b9e184;
     height: 100%;
-    
+    width: 100% - 140px;
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 100px;
 
 }
 
 .s1 {
     position: fixed;
-    z-index: -1;
     margin-left: 0px;
     background-color: #A18B7D;
     height: 100vh;
     width: 100px;
+    flex: 1;
 }
 
 .gallery {
@@ -35,7 +38,33 @@ body {
 }
 
 .contact p a {
-    color: black;
+    color: white;
     text-decoration: none;
     
+}
+
+.contact p a:hover {
+    color: black;
+    text-decoration: underline;
+    
+}
+
+.note {
+    color: black;
+    font-size: 10px;
+	font-family: 'Raleway', 'Georgia';
+    text-align: center;
+    vertical-align: middle;
+    margin-top: 90px;
+    
+}
+
+.note a {
+    text-decoration: none;
+    color: white;
+}
+
+.note a:hover {
+    color: black;
+    text-decoration: none; 
 }
