--- a/main.css
+++ b/main.css
@@ -8,10 +8,10 @@ body {
     font-family: 'Raleway','Georgia', serif;
     background-color: #b9e184;
     height: 100%;
-    width: 100% - 140px;
     text-align: center;
     vertical-align: middle;
     margin-left: 100px;
+    margin-top: 0;
 
 }
 
@@ -67,4 +67,41 @@ body {
 .note a:hover {
     color: black;
     text-decoration: none; 
+}
+
+
+ul {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;    
+    color: white;
+}
+
+.header {
+    height: 450px;
+    width: 100%;
+    background-image: url("./Images/header3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+}
+
+.header p {
+    color: white;
+    font-size: 80px;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 15%;
+    margin-top: 0;
+}
+
+.box {
+    height: 100px;
+    width: 900px;
+    background-color: #4d4d4d;
+    vertical-align: middle;
+    text-align: center;
+    margin-top: -14%;
+    margin-left: 15%;
+    
 }
