--- a/main.css
+++ b/main.css
@@ -87,6 +87,8 @@ ul {
 }
 
 .header p {
+    position: relative;
+    z-index: 1000;
     color: white;
     font-size: 80px;
     text-align: center;
@@ -96,6 +98,7 @@ ul {
 }
 
 .box {
+    position: relative;
     height: 100px;
     width: 900px;
     background-color: #4d4d4d;
